--- a/kensaku.html
+++ b/kensaku.html
@@ -12,14 +12,12 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <form action="check.php" method="POST">
-      ニックネームを入力してください<br />
-      <input type="text" name="nickname" width="100px" /><br />
-      メールアドレスを入力してください<br />
-      <input type="text" name="email" width="200px" /><br />
-      ご意見を一言でお聞かせください<br />
-      <input type="text" name="goiken" width="300px" /><br />
+    <form action="kensaku.php" method="POST">
+      ご意見コードを入力してください<br />
+      <input type="text" name="code" width="100px" /><br />
       <input type="submit" value="送信" />
     </form>
+    <br />
+    <a href="menu.html">メニューに戻る</a>
   </body>
 </html>
